<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metric Converter Free</string>
    <string name="action_settings">Settings</string>
    <string name="empty_string"></string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
    <string name="reset">Reset</string>
    
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    
    <string name="milligram">Milligram</string>
    <string name="gram">Gram</string>
    <string name="ounce">Ounce</string>
    <string name="pound">Pound</string>
    <string name="kilogram">Kilogram</string>
    <string name="stone">Stone</string>
    <string name="short_ton">Short Ton (US)</string>
    <string name="metric_ton">Metric Ton</string>
    <string name="long_ton">Long Ton (UK)</string>
    
    <string name="millimeter">Millimeter</string>
    <string name="centimeter">Centimeter</string>
    <string name="inch">Inch</string>
    <string name="decimeter">Decimeter</string>
    <string name="feet">Feet</string>
    <string name="yard">Yard</string>
    <string name="meter">Meter</string>
    <string name="kilometer">Kilometer</string>
    <string name="mile">Mile</string>
    
    <string name="square_millimeter">Square Millimeter</string>
    <string name="square_centimeter">Square Centimeter</string>
    <string name="square_inch">Square Inch</string>
    <string name="square_feet">Square Feet</string>
    <string name="square_yard">Square Yard</string>
    <string name="square_meter">Square Meter</string>
    <string name="acre">Acre</string>
    <string name="square_kilometer">Square Kilometer</string>
    <string name="square_mile">Square Mile</string>
    
    <string name="milliliter">Milliliter</string>
    <string name="teaspoon">Teaspoon (US)</string>
    <string name="centiliter">Centiliter</string>
    <string name="tablespoon">Tablespoon (US)</string>
    <string name="ounce_volume">Ounce (US)</string>
    <string name="cup">Cup (US)</string>
    <string name="pint">Pint (US)</string>
    <string name="liter">Liter</string>
    <string name="gallon">Gallon (US)</string>
    <string name="kiloliter">Kiloliter</string>

</resources>
