<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:fillViewport="true" >
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:gravity="center"
    	android:background="#FFFFFF" >
    	
    	<LinearLayout
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	
    	    <TextView
    	        android:layout_width="100dp"
    	        android:layout_height="wrap_content"
    	        android:gravity="center"
    	        android:textSize="14sp"
    	        android:text="@string/celsius" />
        	
    	    <EditText
   				android:id="@+id/celsius_text_field"
    			android:layout_width="125dp"
    			android:layout_height="wrap_content"
    			android:textSize="14sp"
    			android:inputType="numberDecimal|numberSigned"
    			android:imeOptions="actionDone" />
    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	
    	    <TextView
    	        android:layout_width="100dp"
    	        android:layout_height="wrap_content"
    	        android:gravity="center"
    	        android:textSize="14sp"
    	        android:text="@string/fahrenheit" />
        	
    	    <EditText
   				android:id="@+id/fahrenheit_text_field"
    			android:layout_width="125dp"
    			android:layout_height="wrap_content"
    			android:textSize="14sp"
    			android:inputType="numberDecimal|numberSigned"
    			android:imeOptions="actionDone" />
    	</LinearLayout>
    	
    	<LinearLayout
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	
    	    <TextView
    	        android:layout_width="100dp"
    	        android:layout_height="wrap_content"
    	        android:gravity="center"
    	        android:textSize="14sp"
    	        android:text="@string/kelvin" />
        	
    	    <EditText
   				android:id="@+id/kelvin_text_field"
    			android:layout_width="125dp"
    			android:layout_height="wrap_content"
    			android:textSize="14sp"
    			android:inputType="numberDecimal|numberSigned"
    			android:imeOptions="actionDone" />
    	</LinearLayout>
    	
    	<LinearLayout
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >

        	<Button
        	    android:id="@+id/temperature_reset_button"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/reset" />
    	</LinearLayout>
 
	</LinearLayout>
</ScrollView>